# Chatbot_BKSI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  task_brief.md
.streamlit/: config.toml
api/: dependencies.py  main.py
api/routes/: chat.py  documents.py
chroma_db/: chroma.sqlite3
configs/: prompts.yaml  settings.yaml
data/raw/: Dang-ky-mon-hoc.md  Danh_gia_ket_qua_hoc_tap.md  Dao_tao_song_nganh_va_Keo_dai_thoi_gian.md  Phien-ban-hop-nhat.md  Quy_dinh_Hoan_thi.md  Quy_dinh_Hoc_phi.md  Quy_dinh_Ky_nang_CNTT.md  Quy_dinh_Ngoai_ngu.md  Quy_dinh_Rut_mon_hoc.md  dang-ki-mon-hoc.md  quy-dinh-chung.md
lancedb_data/chunks.lance/_indices/2813fd3f-e032-407d-9e7a-45bfa94c9dcb/: auxiliary.idx  index.idx
lancedb_data/chunks.lance/_transactions/: 0-7bdaa6bf-f265-48dd-920f-c7d94000121d.txn  1-82edba7e-796a-416c-8770-d59ff369d643.txn
lancedb_data/chunks.lance/_versions/: 1.manifest  2.manifest
scripts/: cli.py  run_ingestion.py  setup_db.py
src/: __init__.py  config.py  data_ingestion.py  embedding.py  llm.py  rag_chain.py  utils.py  vector_store.py
src/cache/: __init__.py  response_cache.py
src/document_processing/: __init__.py  chunker.py  parser.py
src/embeddings/: __init__.py  embedder.py
src/models/: __init__.py  schemas.py
src/rag/: __init__.py  chain.py  memory.py  reranker.py  retriever.py
src/utils/: __init__.py  logger.py
src/vectorstore/: __init__.py  lancedb_store.py
tests/: conftest.py  test_components.py  test_rag.py
ui/: gradio_app.py  hero.js  streamlit_app.py  style.css
