[project]
name = "chatbot-bksi"
version = "0.1.0"
description = "Chatbot BKSI - RAG-based Q&A system for BKSI documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "KhanhNguyen2712" }]
keywords = ["chatbot", "rag", "langchain", "leann", "vector-database"]

dependencies = [
    # Core LangChain
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    # Vector Store - LanceDB (cross-platform)
    "lancedb>=0.15.0",
    "pyarrow>=15.0.0",
    # Document Processing - Docling with OCR support
    "docling>=2.0.0",
    "onnxruntime>=1.18.0",  # For RapidOCR performance
    "easyocr>=1.7.0",  # Fallback OCR with Vietnamese support
    # Embeddings
    "sentence-transformers>=3.0.0",
    "transformers>=4.46.0",
    "hf-xet>=1.0.0",
    # API Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    # UI Frameworks
    "gradio>=5.0.0",
    "streamlit>=1.40.0",
    # Utils
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pdfplumber>=0.11.8",
    "pymupdf>=1.26.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
bksi = "scripts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts", "api", "ui"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.uv]
link-mode = "copy"
